# automatick

./: Cargo.toml  notes.md
src/: action.rs  app.rs  auth.rs  colors.rs  main.rs  modal.rs  tasks.rs  ui.rs  utils.rs
src/ui/: app_ui.rs  colors.rs  mod.rs  task_editor.rs  task_list.rs  tui.rs
src/ui/modal/: confirmation_modal.rs  mod.rs  postpone_modal.rs  task_modal.rs
